version1.1/css/main.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	font-size: 100%;
	background: transparent;
	text-decoration: none;
}

table {
	width: 100%
}

body {
    margin: 0 auto;
    position: relative;
    background-color: #ffffff;
	font-family: "Trebuchet MS","Helvetica Neue", Arial, Helvetica, sans-serif;
    font-size: 18px;
		color: gray;
    line-height: 1.5; /* Baseline grid of 21px */
    text-align: center;
}

ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

:focus {
	outline: 0;
}

/* tables may still need 'cellspacing="0"' in the markup */
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* @end Reset */

/* @group Font sizes */

/* basic font sizes */
p, ul, ol, dl, table, address, blockquote, fieldset, pre, form div {
	font-size: 1em;  /* 14px */
}

/* deal with likely (but certainly not all) inherited shrinkage */

ul p, ol p, table p, dl p, ul ul, ol ol, ul ol, ol ul, address p, blockquote p, form div div, form div p, fieldset div, table form div {
	font-size: 1em;
}

/* @end Font sizes */

/* @group Margins */

p {
	margin: 0.8571em 0 1.4286em 0;
}
form {
	margin-bottom: 1.517em; /* 18px */
}
ul ul, ol ol, ol ul, ul ol {
	margin-bottom: 0;
}

/* @end Margins */

/* @group Links */

button.link span {
	color: #8fa52d;
	text-decoration: none;
	font-weight: bold;;
	border-bottom: 1px solid #8fa52d;
}

a:visited {
	text-decoration: none;
	font-weight: bold;
	color: black;
}

a:hover,
a:focus,
button.link:hover,
button.link:focus span {
	color: #fff; 
	text-decoration: none;
	font-weight: bold;
	background-color: #8fa52d;
}
a:active,
button.link:active span {
	color: #fff;
	text-decoration: none;
	font-weight: bold;
	background-color: #8fa52d;
}

/* @end Links */

/* @group Headings */

h1 {
	font-size: 3.5714em; 		/* 50px */
    line-height: 1; 			/* 50px */
	margin-top: 0.56em; 		/* 28px */
	margin-bottom: 0.5em; 		/* 25px */
    color: #85A923;
}
h2 {
	font-size: 1.7857em;   		/* 25px */
	line-height: 1.4; 			/* 35px */
	margin-top: 1.2em;		   	/* 30px */
	margin-bottom: 1.4em; 	 	/* 35px */
    color: #645951;
}
h3 {
	font-size: 1.2857em;		/* 18px */
	margin-top: 1.1111em;     	/* 20px */
	margin-bottom: 0.5556em; 	/* 10px */
	color: #645951;
}
h4 {
	font-size: 1.1428em;   		/* 16px */
	margin-top:1.25em;	   		/* 20px */
	margin-bottom: 0.625em; 	/* 10px */
}
h5, h6 {
	font-size: 1em;  			/* 14px */
}

/* @end Headings */

/* @group Lists */

.prose ul, ul.bullets, ul.bullets ul {	/* unordered lists more often DON'T require bullets except in extended bits of writing - use the .prose class or apply directly with .bullets */
	list-style-type: disc;
	margin-left: 1.385em; /* 18px */
}
.bullets li {
	margin-top: 0.5em;			/*  8px */
	margin-bottom: 1.25em;		/* 18px */
}

ol {	/* ordered lists usually DO require bullets */
	list-style-type: decimal;
	margin-left: 2.077em; /* 27px */
}

dt {
	font-weight: bold;
	margin-top: 1.385em; /* 18px */
}

/* @end Lists */

/* @group Tables */


caption {
	font-weight: bold;
	padding-bottom: 0.643em; /* 9px */
	font-size:1.077em; /* 14px */
}

thead th {
	border-top: 1px solid #666;
	border-bottom: 3px solid #666;
	padding-top: 0;
	padding-bottom: 0.692em; /* 9px */
}


tbody tr th,
tbody tr td {
	border-top: 1px solid #ddd;
}

th,
td {
	padding: 0.385em 0.692em 0.308em 0.692em; /* 5px 9px 4px 9px */
}

/* @end Tables */

/* @group Blockquotes */

blockquote {
	font-style: italic;
	margin-left: 1.385em; /* 18px */
	margin-right: 1.385em; /* 18px */
}

blockquote cite,
blockquote em {
	font-style: normal;
}

/* @end Blockquotes */

/* @group Forms */

/* @group Containers */

form .container {
	margin-bottom: 1.385em; /* 18px */
}

/* @group Fieldsets */

fieldset {
	border: 1px solid #ccc;
	padding: 0 1.385em 0.692em 1.385em; /* 9px 18px 0 18px */
}

legend {
	font-weight: bold;
}

form fieldset .container {
	margin-top: 1.385em; /* 18px */
	margin-bottom:0;
	position: relative;
}

/* @end Fieldsets */

/* @end Forms */

/* @group Labels */

label {
	font-weight: bold;
	cursor: pointer;
}

.meta-label {
	font-weight: bold;
	margin-bottom: 0;
}

.multi-container label, 
.radio-container label, 
.checkbox-container label {
	font-weight: normal;
}

.radio-container label, 
.checkbox-container label {
	display: block;
}

.compact label {
	display: inline;
}

/* @end */

/* @group Meta */

form .help {
	display: block;
	color: #777;
	font-style: normal;
	font-size: 0.846em; /* 11px */
}

/* @end Meta */

/* @group Form controls */

input,
textarea,
select,
button {
	font-family: inherit;
	font-size: 1em;
}

textarea,
input[type='text'], 
input[type='password'],
select {
	border-width: 1px;
	border-style: solid;
	border-top-color: #999;
	border-left-color: #999;
	border-bottom-color: #ccc;
	border-right-color: #ccc;
	padding: 0 1px 1px 1px;
}

textarea:focus,
input[type='text']:focus, 
input[type='password']:focus,
select:focus {
	border-color: #888;
	outline: 2px solid #ffffaa;
}

input.short {
	width: 4em;
}

input.medium,
textarea.medium {
	width: 12em;
}

input.long,
textarea.long {
	width: 30em;
}

textarea {
	width: 99%;
	display: block;
}

.button-container input {
	font-weight: bold;
}

.button-container input.cancel {
	font-weight: normal;
}

button {
	border: 0;
	padding: 0;
	cursor: pointer;
	width: auto;
	overflow: visible;
}

button.link {
	background-color: #fff;
	font-weight: normal;
}

/* accessability feature, resize check and radio inputs */
.radio-container input, 
.checkbox-container input {
	width: 1em;
	height: 1em;
}
/* ... */

